--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "html-webpack-pug-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^8.1.1",
     "postcss-flexbugs-fixes": "^4.2.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.0.3",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
+    "postcss-simple-vars": "^6.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "terser-webpack-plugin": "^2.3.6",
