--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "terser-webpack-plugin": "^2.3.6",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
